recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:4: error: not found: value step
    tree((step+1),shrink*length,angle,shrink);
          ^